# at1

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: chauhan_anika-14188775-week1_CatBoost.ipynb  chauhan_anika-14188775-week1_baseline.ipynb  chauhan_anika-14188775-week3_XGBoost_features_imputed.ipynb  chauhan_anika-14188775-week4_XGBoost_features_imputed_industry_std.ipynb  chauhan_anika-14188775-week4_XGBoost_limited_features.ipynb  chauhan_anika-14188775-week4_XGBoost_limited_features_ind_sdt.ipynb  chauhan_anika-1477885-week1_XGBoost.ipynb  chauhan_anika-1477885-week2_XGBoost_refined.ipynb  chauhan_anika-1477885-week3_XGBoost_params_overfit.ipynb  chauhan_anika-1477885-week3_XGBoost_refined_params.ipynb
src/models/: feet_inches_to_cm.joblib
