[tool.poetry]
name = "at1"
version = "0.1.0"
description = ""
authors = ["Anika Chauhan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.0.1"
jupyterlab = "3.6.3"
scikit-learn = "1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
